--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "MIT" }
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "Rasmus Rynell", email = "rynell.rasmus@gmail.com" }
 ]
 keywords = ["axis", "mqtt", "camera", "analytics", "iot"]
 classifiers = [
@@ -45,10 +45,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/ax-devil-mqtt"
-Repository = "https://github.com/yourusername/ax-devil-mqtt.git"
-Documentation = "https://github.com/yourusername/ax-devil-mqtt#readme"
-"Bug Tracker" = "https://github.com/yourusername/ax-devil-mqtt/issues"
+Homepage = "https://github.com/rasmusrynell/ax-devil-mqtt"
+Repository = "https://github.com/rasmusrynell/ax-devil-mqtt.git"
+Documentation = "https://github.com/rasmusrynell/ax-devil-mqtt#readme"
+"Bug Tracker" = "https://github.com/rasmusrynell/ax-devil-mqtt/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/ax_devil_mqtt"]
