--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "ax-devil-mqtt"
 version = "0.1.0"
-description = "A Python package for settings up and retrieving data from Axis cameras using MQTT"
+description = "A Python package for settings up and retrieving data from Axis devices using MQTT"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "MIT" }
