--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,13 @@ dependencies = [
     "click>=8.0.0"
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "types-python-dateutil>=2.8.0",
+    "mypy>=1.0.0"
+]
+
 [project.urls]
 Homepage = "https://github.com/rasmusrynell/ax-devil-mqtt"
 Repository = "https://github.com/rasmusrynell/ax-devil-mqtt.git"
